--- a/app/src/main/res/layout/act_detailsof_vunity.xml
+++ b/app/src/main/res/layout/act_detailsof_vunity.xml
@@ -78,6 +78,7 @@
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
                         <androidx.appcompat.widget.LinearLayoutCompat
+                            android:id="@+id/lay_mobile"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/bg_bottom_line"
