--- a/app/src/main/res/drawable/bg_oval_unselected.xml
+++ b/app/src/main/res/drawable/bg_oval_unselected.xml
@@ -4,6 +4,5 @@
     <corners android:radius="15dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/theme_main" />
-    <solid android:color="@color/light_grey" />
+        android:color="@color/colorPrimary" />
 </shape>
