--- a/app/src/main/res/layout/act_users.xml
+++ b/app/src/main/res/layout/act_users.xml
@@ -1,217 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_users"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:focusable="false"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical">
+    tools:openDrawer="end">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <include
+        android:id="@+id/content_users"
+        layout="@layout/content_users"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fitsSystemWindows="true"
-        app:elevation="0dp">
+        android:layout_height="match_parent" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:horizontalSpacing="1dp"
-            android:orientation="vertical"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp"
-            app:cardUseCompatPadding="true"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="52dp">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/im_back"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:padding="15dp"
-                    android:tint="@color/theme_light_grey"
-                    app:srcCompat="@drawable/ic_left_arrow" />
-
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_toStartOf="@+id/txt_total_user"
-                    android:layout_toEndOf="@+id/im_back"
-                    android:theme="@style/CustomSearch"
-                    app:iconifiedByDefault="false"
-                    app:queryBackground="@android:color/transparent"
-                    app:queryHint="Search in 'Users'"
-                    app:searchIcon="@null" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txt_total_user"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginEnd="15dp"
-                    android:background="@drawable/bg_oval"
-                    android:fontFamily="@font/lato_bold"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:textColor="@color/theme_main"
-                    android:textSize="14sp" />
-
-            </RelativeLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/layout_refresh"
-        android:layout_width="match_parent"
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="210dp"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_gravity="end"
+        android:layout_margin="5dp"
+        android:background="@color/white">
 
-        <RelativeLayout
+        <include
+            layout="@layout/filter_users"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content" />
 
-            <FrameLayout
-                android:id="@+id/lay_data"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:visibility="visible">
+    </com.google.android.material.navigation.NavigationView>
 
-                <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/lay_shimmer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:shimmer_duration="700">
-
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <androidx.appcompat.widget.LinearLayoutCompat
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <include
-                                layout="@layout/slim_user"
-                                tools:ignore="TooDeepLayout" />
-
-                            <include layout="@layout/slim_user" />
-
-                            <include layout="@layout/slim_user" />
-
-                            <include layout="@layout/slim_user" />
-
-                            <include layout="@layout/slim_user" />
-
-                            <include layout="@layout/slim_user" />
-
-                            <include layout="@layout/slim_user" />
-                        </androidx.appcompat.widget.LinearLayoutCompat>
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
-                </com.facebook.shimmer.ShimmerFrameLayout>
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/view_users"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:scrollbars="none" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </FrameLayout>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/lay_no_internet"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="100sp"
-                    android:layout_height="100sp"
-                    android:layout_gravity="center"
-                    android:tint="@color/theme_main"
-                    app:srcCompat="@drawable/ic_no_wifi" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/lato_bold"
-                    android:gravity="center"
-                    android:text="@string/oh_uh"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="250sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/lato_regular"
-                    android:gravity="center"
-                    android:text="@string/msg_no_internet"
-                    android:textSize="13sp" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/lay_no_data"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="80sp"
-                    android:layout_height="80sp"
-                    android:layout_gravity="center"
-                    android:padding="5sp"
-                    android:tint="@color/theme_main"
-                    app:srcCompat="@drawable/ic_no_data" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10sp"
-                    android:fontFamily="@font/lato_bold"
-                    android:gravity="center"
-                    android:text="@string/sorry_no_data_found"
-                    android:textColor="@color/theme_dark_grey"
-                    android:textSize="16sp" />
-
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </RelativeLayout>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
