--- a/app/src/main/res/layout/content_vunity_users.xml
+++ b/app/src/main/res/layout/content_vunity_users.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lay_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -52,20 +53,19 @@
                     android:tint="@color/theme_main"
                     app:srcCompat="@drawable/ic_filter" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txt_search"
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/search"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_toStartOf="@+id/img_filter"
                     android:layout_toEndOf="@+id/img_profile"
                     android:fontFamily="@font/lato_regular"
-                    android:gravity="center_vertical"
-                    android:paddingStart="10dp"
-                    android:text="@string/filter_with_vunity"
-                    android:textColor="@color/theme_pure_grey"
-                    android:textSize="16sp"
-                    tools:ignore="RtlSymmetry" />
+                    android:theme="@style/CustomSearch"
+                    app:iconifiedByDefault="false"
+                    app:queryBackground="@android:color/transparent"
+                    app:queryHint="@string/search_in_vunity"
+                    app:searchIcon="@null" />
 
             </RelativeLayout>
         </com.google.android.material.card.MaterialCardView>
