--- a/app/src/main/res/layout/act_add_book.xml
+++ b/app/src/main/res/layout/act_add_book.xml
@@ -346,6 +346,34 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerInParent="true"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/lato_regular"
+                            android:text="@string/make_announcement"
+                            android:textColor="@color/theme_dark_grey"
+                            android:textSize="16sp"
+                            tools:ignore="UnusedAttribute" />
+
+                        <androidx.appcompat.widget.SwitchCompat
+                            android:id="@+id/swt_announcement"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
+                            android:scaleX="0.8"
+                            android:scaleY="0.8" />
+
+                    </RelativeLayout>
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_create"
                         style="@style/BtnTheme"
