--- a/app/src/main/res/layout/act_verification.xml
+++ b/app/src/main/res/layout/act_verification.xml
@@ -45,7 +45,7 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="140dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/im_applogo" />
+                    android:src="@drawable/im_company_logo" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
