--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,6 +2,7 @@
 <resources>
     <item name="fab_category" type="id" />
     <item name="fab_book" type="id" />
+    <item name="fab_video" type="id" />
     <item name="fab_genre" type="id" />
     <item name="fab_user" type="id" />
     <item name="fab_vunity_announcement" type="id" />
