--- a/app/src/main/res/layout/act_add_video.xml
+++ b/app/src/main/res/layout/act_add_video.xml
@@ -270,7 +270,7 @@
                             android:digits="0123456789"
                             android:fontFamily="@font/lato_regular"
                             android:imeOptions="actionDone"
-                            android:inputType="number"
+                            android:inputType="phone"
                             android:maxLength="4"
                             android:maxLines="1"
                             android:paddingStart="1dp"
