--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:digits="0123456789"
                         android:fontFamily="@font/lato_regular"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="10"
                         android:paddingStart="1dp"
                         android:paddingEnd="1dp"
@@ -134,47 +134,6 @@
                         android:text="@string/create_one"
                         android:textColor="@color/theme_main"
                         android:textSize="16sp" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/lay_skip"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="horizontal"
-                    android:weightSum="3">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@color/light_grey" />
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_skip"
-                        style="@style/Widget.MaterialComponents.Button.TextButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/lato_regular"
-                        android:gravity="center"
-                        android:insetTop="0dp"
-                        android:insetBottom="0dp"
-                        android:text="--Skip--"
-                        android:textAllCaps="false"
-                        android:textColor="@color/theme_main"
-                        android:textSize="16sp" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@color/light_grey" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
