--- a/app/src/main/res/layout/act_profile.xml
+++ b/app/src/main/res/layout/act_profile.xml
@@ -8,6 +8,8 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
@@ -139,9 +141,39 @@
                         android:orientation="vertical">
 
                         <androidx.appcompat.widget.LinearLayoutCompat
+                            android:id="@+id/lay_report"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="42dp"
+                                android:layout_height="42dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_gravity="center_vertical"
+                                android:padding="2.5dp"
+                                android:tint="@color/theme_main"
+                                app:srcCompat="@drawable/ic_document" />
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="20dp"
+                                android:fontFamily="@font/lato_regular"
+                                android:padding="5dp"
+                                android:text="@string/report"
+                                android:textColor="@color/theme_dark_grey"
+                                android:textSize="16sp" />
+
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+                        <androidx.appcompat.widget.LinearLayoutCompat
                             android:id="@+id/lay_bookmarks"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
                             android:orientation="horizontal">
 
                             <androidx.appcompat.widget.AppCompatImageView
