--- a/app/src/main/res/layout/act_verification.xml
+++ b/app/src/main/res/layout/act_verification.xml
@@ -83,7 +83,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:hint="@string/_0"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="1"
                         android:padding="5dp"
                         android:textColor="@color/theme_dark_grey"
@@ -100,7 +100,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:hint="@string/_0"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="1"
                         android:padding="5dp"
                         android:textColor="@color/theme_dark_grey"
@@ -118,7 +118,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:hint="@string/_0"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="1"
                         android:padding="5dp"
                         android:textColor="@color/theme_dark_grey"
@@ -135,7 +135,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
                         android:hint="@string/_0"
-                        android:inputType="number"
+                        android:inputType="phone"
                         android:maxLength="1"
                         android:padding="5dp"
                         android:textColor="@color/theme_dark_grey"
