--- a/app/src/main/res/layout/card_banner.xml
+++ b/app/src/main/res/layout/card_banner.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
+    android:id="@+id/card_main"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
