--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,12 @@
     <color name="light_orange">#0DFF453A</color>
     <color name="green">#558B2F</color>
 
+    <color name="dayOne">#E53935</color>
+    <color name="dayTwo">#8E24AA</color>
+    <color name="dayThree">#1E88E5</color>
+    <color name="dayFour">#00897B</color>
+    <color name="dayFive">#FDD835</color>
+    <color name="daySix">#81D4FA</color>
+    <color name="daySeven">#CE93D8</color>
+
 </resources>
