--- a/app/src/main/res/layout/act_report.xml
+++ b/app/src/main/res/layout/act_report.xml
@@ -241,20 +241,17 @@
                         <FrameLayout
                             android:id="@+id/lay_data"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:visibility="visible">
+                            android:layout_height="match_parent">
 
                             <com.facebook.shimmer.ShimmerFrameLayout
                                 android:id="@+id/lay_shimmer"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:visibility="visible"
                                 app:shimmer_duration="700">
 
                                 <androidx.appcompat.widget.LinearLayoutCompat
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
                                     android:orientation="vertical">
 
                                     <include
@@ -275,6 +272,7 @@
                                     class="im.dacer.androidcharts.LineView"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent" />
+
                             </HorizontalScrollView>
 
                         </FrameLayout>
